[gd_scene load_steps=8 format=3 uid="uid://d3bwxmcem5ios"]

[ext_resource type="Script" path="res://coin/hud_manager.gd" id="1_wugr1"]
[ext_resource type="Texture2D" uid="uid://c3o7or23crvpt" path="res://assets/Mini FX, Items & UI/Common Pick-ups/CoinSeparado/coin1.png" id="2_qadaf"]
[ext_resource type="Texture2D" uid="uid://dx80glue84eue" path="res://assets/Mini FX, Items & UI/Common Pick-ups/CoinSeparado/coin2.png" id="3_gci5c"]
[ext_resource type="Texture2D" uid="uid://cmmo2ffubgt0c" path="res://assets/Mini FX, Items & UI/Common Pick-ups/CoinSeparado/coin3.png" id="4_1qmqj"]
[ext_resource type="Texture2D" uid="uid://dmevudns5lrhj" path="res://assets/Mini FX, Items & UI/Common Pick-ups/CoinSeparado/coin4.png" id="5_24d6b"]
[ext_resource type="FontFile" uid="uid://4btwmq0brhm8" path="res://assets/Pistoleiro_Assets/RevMiniPixel.ttf" id="6_44gmx"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_vwfak"]
frames = 4
speed_scale = 8.0
frame_0/texture = ExtResource("2_qadaf")
frame_1/texture = ExtResource("3_gci5c")
frame_1/duration = 1.0
frame_2/texture = ExtResource("4_1qmqj")
frame_2/duration = 1.0
frame_3/texture = ExtResource("5_24d6b")
frame_3/duration = 1.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.88)
script = ExtResource("1_wugr1")

[node name="clock_timer" type="Timer" parent="."]
autostart = true

[node name="container" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1065.0
offset_bottom = 242.0
scale = Vector2(2, 2.089)
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="coins_comtainer" type="HBoxContainer" parent="container"]
layout_mode = 2
size_flags_horizontal = 0

[node name="StaticBody2D" type="StaticBody2D" parent="container/coins_comtainer"]

[node name="coins_counter" type="Label" parent="container/coins_comtainer/StaticBody2D"]
texture_filter = 1
custom_minimum_size = Vector2(0, 22)
offset_left = 746.167
offset_top = 56.189
offset_right = 786.167
offset_bottom = 78.189
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_44gmx")
theme_override_font_sizes/font_size = 16
text = "0000"
vertical_alignment = 1

[node name="coins_icon" type="TextureRect" parent="container/coins_comtainer/StaticBody2D"]
offset_left = 728.667
offset_top = 56.733
offset_right = 744.667
offset_bottom = 72.733
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AnimatedTexture_vwfak")

[node name="timer_counter" type="HBoxContainer" parent="container"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="StaticBody2D" type="StaticBody2D" parent="container/timer_counter"]

[node name="timer_counter" type="Label" parent="container/timer_counter/StaticBody2D"]
texture_filter = 1
offset_left = 475.5
offset_top = 59.4529
offset_right = 519.5
offset_bottom = 75.4529
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_44gmx")
theme_override_font_sizes/font_size = 16
text = "00:00"
vertical_alignment = 1

[node name="score_coumteiner" type="HBoxContainer" parent="container"]
layout_mode = 2
size_flags_horizontal = 8

[node name="StaticBody2D" type="StaticBody2D" parent="container/score_coumteiner"]

[node name="score_counter" type="Label" parent="container/score_coumteiner/StaticBody2D"]
texture_filter = 1
offset_left = -67.0
offset_top = 31.7102
offset_right = -7.0
offset_bottom = 47.7102
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_44gmx")
theme_override_font_sizes/font_size = 16
text = "000000"
vertical_alignment = 1

[node name="life_container" type="HBoxContainer" parent="container"]
texture_filter = 1
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="StaticBody2D" type="StaticBody2D" parent="container/life_container"]
position = Vector2(352.999, 210.825)

[node name="player_life" type="Label" parent="container/life_container/StaticBody2D"]
texture_filter = 1
offset_left = -652.499
offset_top = -294.835
offset_right = -626.499
offset_bottom = -272.835
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_44gmx")
theme_override_font_sizes/font_size = 16
text = "03"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="clock_timer" to="." method="_on_clock_timer_timeout"]
